[package]
name = "albjorkm-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.12.3"
imgui = { version = "0.11.0", features = [] }
imgui-glow-renderer = "0.11.0"
imgui-sdl2-support = "0.11.0"
sdl2 = "0.34.5"
chess = { git = "https://github.com/INDA23PlusPlus/emilaa-chess" }
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
